--- a/TDA_Analysis_Scripts/forrestTDA.ipynb
+++ b/TDA_Analysis_Scripts/forrestTDA.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "f3764fa8-b9ad-4c5c-bc48-880213a503bd",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
     "time_list_names = ['93-00', '98-04', '01-13', '10-16', '14-20']        \n",
     "time_list =[time_dec1, time_overlap1, time_dec2, time_overlap2, time_dec3]\n",
     "stratum_list = [1, 2, 3, 4, 5, 6, 7, 9]\n",
-    "Season_names = [\"WINTER\"] # can add other seasons later\n",
+    "Season_names = [\"SUMMER\"] # can add other seasons later\n",
     "\n",
     "nonempty_stratum = []\n",
     "for i in stratum_list:\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "b1107ac8-fcb6-4248-a0a9-4f8656dd993b",
    "metadata": {},
    "outputs": [
@@ -186,13 +186,18 @@
     "    variables = [\"PREDICTED_WDP\", \"PREDICTED_SECCHI\", \"PREDICTED_TEMP\", \"PREDICTED_DO\", \n",
     "           \"PREDICTED_TURB\", \"PREDICTED_VEL\", \"PREDICTED_TP\", #\"PREDICTED_COND\",\n",
     "           \"PREDICTED_TN\", \"PREDICTED_SS\", \"PREDICTED_CHLcal\"]\n",
+    "    var_to_index = {variables[i]:i for i in range(len(variables))}\n",
+    "    \n",
+    "    projected_vars = variables\n",
+    "    projected_vars_indices = [var_to_index[var] for var in projected_vars]\n",
+    "    \n",
     "    X = X[variables]\n",
     "    \n",
     "    if X.shape[0]<10:\n",
     "        #print(X)\n",
     "        print(\"Not enough data in \", keys, \"_size = \", X.shape[0])\n",
     "        return(X.shape[0])\n",
-    "    # makes indices in kepler mapper 1 to 1 for statistical analysis on nodes\n",
+    "    # makes indices in kepler mapper 1 to 1 for statistical analysis on nodes in scomplexAnalysis\n",
     "    \n",
     "    X.reset_index(drop = True, inplace = True)\n",
     "    \n",
@@ -214,9 +219,15 @@
     "            max_index = i\n",
     "    print(\"Max principal component: \", variables[max_index])\n",
     "    \n",
+    "    # summary variables\n",
+    "    summary_variables = mapper.project(np.array(X), projection = projected_vars_indices, scaler = None)\n",
+    "    \n",
     "    \n",
     "    # Generate the simplicial complex\n",
-    "    scomplex = mapper.map(lens, X, cover=km.Cover(n_cubes=N_CUBES, perc_overlap=PERC_OVERLAP), clusterer=cluster_alg, remove_duplicate_nodes = True)  \n",
+    "    \n",
+    "    \n",
+    "    scomplex = mapper.map(lens, X, cover=km.Cover(n_cubes=N_CUBES, perc_overlap=PERC_OVERLAP), \n",
+    "                          clusterer=cluster_alg, remove_duplicate_nodes = True)  \n",
     "    \n",
     "    \n",
     "    pl_brewer = [[0.0, '#006837'],\n",
@@ -232,10 +243,11 @@
     "             [1.0, '#a50026']]\n",
     "\n",
     "    color_values = lens [:,0] - lens[:,0].min()\n",
+    "    color_function_name = ['Distance to x-min']\n",
     "    my_colorscale = pl_brewer\n",
     "    kmgraph,  mapper_summary, colorf_distribution = get_mapper_graph(scomplex, \n",
-    "                                                                     color_values,  \n",
-    "                                                                     color_function_name='Distance to x-min', \n",
+    "                                                                     color_values = color_values,  \n",
+    "                                                                     color_function_name=color_function_name, \n",
     "                                                                     colorscale=my_colorscale)\n",
     "\n",
     "    bgcolor = 'rgba(10,10,10, 0.9)'\n",
@@ -263,24 +275,27 @@
     "\n",
     "    # DESIRED FILE PATH, CHANGE TO FIT YOUR LOCAL MACHINE\n",
     "    \n",
-    "    directory_path = \"Users\\\\forre\\\\Desktop\\\\REU\\\\TDA\\\\Data\\\\Killian\"\n",
+    "    directory_path = \"Users\\\\forre\\\\Desktop\\\\REU\\\\TDA\\\\Data\\\\TDAOutputs\"\n",
     "    html_output_path = directory_path + \"\\\\\" + str(keys[0]) + 'PCA_1' + 'all_var_' + 'Eps_' + str(DBSCAN_EPSILON) +'MinS_' + str(DBSCAN_MIN_SAMPLES) + 'NCUBES_' + str(N_CUBES) + 'PEROvLp_' + str(PERC_OVERLAP) + '.html'\n",
     "    html_output_path = html_output_path.replace(\" \",\"-\")\n",
     "    html_output_path = html_output_path.replace(\":\",\"_\")\n",
     "    html_output_path = \"C:\\\\\"+html_output_path\n",
     "    #print(html_output_path)\n",
-    "    mapper.visualize(scomplex, path_html=html_output_path)\n",
+    "    mapper.visualize(scomplex, path_html=html_output_path, color_values = color_values,\n",
+    "                    color_function_name = color_function_name,\n",
+    "                    lens = summary_variables, lens_names = projected_vars)\n",
     "    \n",
     "    #Update the fw_graph colorbar, setting its title:\n",
     "    fw_graph.data[1].marker.colorbar.title = 'dist to<br>x-min'\n",
     "    return scomplex, X\n",
+    "    \n",
     "\n",
     "print(\"Functions loaded\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "4c1be21d-c22a-4686-8fec-e28127311d64",
    "metadata": {},
    "outputs": [
@@ -288,51 +303,81 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Stratum 1 WINTER 93-00: ']\n",
-      "pca explained variance:  [0.95130899]\n",
-      "Max principal component:  PredictedSS\n",
-      "['Stratum 2 WINTER 93-00: ']\n",
-      "pca explained variance:  [0.96270246]\n",
-      "Max principal component:  PredictedSS\n",
-      "['Stratum 3 WINTER 93-00: ']\n",
-      "pca explained variance:  [0.65071566]\n",
-      "Max principal component:  PredictedSECCHI\n",
-      "['Stratum 1 WINTER 98-04: ']\n",
-      "pca explained variance:  [0.95394105]\n",
-      "Max principal component:  PredictedSS\n",
-      "['Stratum 2 WINTER 98-04: ']\n",
-      "pca explained variance:  [0.95408771]\n",
-      "Max principal component:  PredictedSS\n",
-      "['Stratum 3 WINTER 98-04: ']\n",
-      "pca explained variance:  [0.78559672]\n",
-      "Max principal component:  PredictedTURB\n",
-      "['Stratum 1 WINTER 01-13: ']\n",
-      "pca explained variance:  [0.84098047]\n",
-      "Max principal component:  PredictedTURB\n",
-      "['Stratum 2 WINTER 01-13: ']\n",
-      "pca explained variance:  [0.87973444]\n",
-      "Max principal component:  PredictedTURB\n",
-      "['Stratum 3 WINTER 01-13: ']\n",
-      "pca explained variance:  [0.92099114]\n",
-      "Max principal component:  PredictedTURB\n",
-      "['Stratum 1 WINTER 10-16: ']\n",
-      "pca explained variance:  [0.90793394]\n",
-      "Max principal component:  PredictedTURB\n",
-      "['Stratum 2 WINTER 10-16: ']\n",
-      "pca explained variance:  [0.91457557]\n",
-      "Max principal component:  PredictedTURB\n",
-      "['Stratum 3 WINTER 10-16: ']\n",
-      "pca explained variance:  [0.6395903]\n",
-      "Max principal component:  PredictedTURB\n",
-      "['Stratum 1 WINTER 14-20: ']\n",
-      "pca explained variance:  [0.92182334]\n",
-      "Max principal component:  PredictedSS\n",
-      "['Stratum 2 WINTER 14-20: ']\n",
-      "pca explained variance:  [0.79184309]\n",
-      "Max principal component:  PredictedSS\n",
-      "['Stratum 3 WINTER 14-20: ']\n",
-      "pca explained variance:  [0.68520122]\n",
-      "Max principal component:  PredictedSECCHI\n"
+      "['Stratum 1 SUMMER 93-00: ']\n",
+      "pca explained variance:  [0.6150497]\n",
+      "Max principal component:  PREDICTED_SS\n",
+      "['Stratum 2 SUMMER 93-00: ']\n",
+      "pca explained variance:  [0.71972418]\n",
+      "Max principal component:  PREDICTED_SS\n",
+      "['Stratum 3 SUMMER 93-00: ']\n",
+      "pca explained variance:  [0.84964374]\n",
+      "Max principal component:  PREDICTED_TURB\n",
+      "['Stratum 4 SUMMER 93-00: ']\n",
+      "pca explained variance:  [0.77396801]\n",
+      "Max principal component:  PREDICTED_CHLcal\n",
+      "['Stratum 5 SUMMER 93-00: ']\n",
+      "pca explained variance:  [0.47579932]\n",
+      "Max principal component:  PREDICTED_CHLcal\n",
+      "['Stratum 1 SUMMER 98-04: ']\n",
+      "pca explained variance:  [0.68714472]\n",
+      "Max principal component:  PREDICTED_SS\n",
+      "['Stratum 2 SUMMER 98-04: ']\n",
+      "pca explained variance:  [0.61835981]\n",
+      "Max principal component:  PREDICTED_SS\n",
+      "['Stratum 3 SUMMER 98-04: ']\n",
+      "pca explained variance:  [0.85762022]\n",
+      "Max principal component:  PREDICTED_TURB\n",
+      "['Stratum 4 SUMMER 98-04: ']\n",
+      "pca explained variance:  [0.75229259]\n",
+      "Max principal component:  PREDICTED_SS\n",
+      "['Stratum 5 SUMMER 98-04: ']\n",
+      "pca explained variance:  [0.63300515]\n",
+      "Max principal component:  PREDICTED_CHLcal\n",
+      "['Stratum 1 SUMMER 01-13: ']\n",
+      "pca explained variance:  [0.86858432]\n",
+      "Max principal component:  PREDICTED_SS\n",
+      "['Stratum 2 SUMMER 01-13: ']\n",
+      "pca explained variance:  [0.88321576]\n",
+      "Max principal component:  PREDICTED_SS\n",
+      "['Stratum 3 SUMMER 01-13: ']\n",
+      "pca explained variance:  [0.78046234]\n",
+      "Max principal component:  PREDICTED_CHLcal\n",
+      "['Stratum 4 SUMMER 01-13: ']\n",
+      "pca explained variance:  [0.78162302]\n",
+      "Max principal component:  PREDICTED_SS\n",
+      "['Stratum 5 SUMMER 01-13: ']\n",
+      "pca explained variance:  [0.53709246]\n",
+      "Max principal component:  PREDICTED_TURB\n",
+      "['Stratum 1 SUMMER 10-16: ']\n",
+      "pca explained variance:  [0.95883337]\n",
+      "Max principal component:  PREDICTED_SS\n",
+      "['Stratum 2 SUMMER 10-16: ']\n",
+      "pca explained variance:  [0.95752227]\n",
+      "Max principal component:  PREDICTED_SS\n",
+      "['Stratum 3 SUMMER 10-16: ']\n",
+      "pca explained variance:  [0.80258748]\n",
+      "Max principal component:  PREDICTED_CHLcal\n",
+      "['Stratum 4 SUMMER 10-16: ']\n",
+      "pca explained variance:  [0.82016945]\n",
+      "Max principal component:  PREDICTED_TURB\n",
+      "['Stratum 5 SUMMER 10-16: ']\n",
+      "pca explained variance:  [0.72636072]\n",
+      "Max principal component:  PREDICTED_CHLcal\n",
+      "['Stratum 1 SUMMER 14-20: ']\n",
+      "pca explained variance:  [0.91055277]\n",
+      "Max principal component:  PREDICTED_SS\n",
+      "['Stratum 2 SUMMER 14-20: ']\n",
+      "pca explained variance:  [0.90465502]\n",
+      "Max principal component:  PREDICTED_SS\n",
+      "['Stratum 3 SUMMER 14-20: ']\n",
+      "pca explained variance:  [0.87475074]\n",
+      "Max principal component:  PREDICTED_SS\n",
+      "['Stratum 4 SUMMER 14-20: ']\n",
+      "pca explained variance:  [0.93730049]\n",
+      "Max principal component:  PREDICTED_TURB\n",
+      "['Stratum 5 SUMMER 14-20: ']\n",
+      "pca explained variance:  [0.63628362]\n",
+      "Max principal component:  PREDICTED_CHLcal\n"
      ]
     }
    ],
@@ -347,14 +392,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "55807769-45a0-43f3-adf9-5917b5ee0f2a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json as js\n",
     "json = js.dumps(mapper_output_dict)\n",
-    "f = open(r\"C:\\Users\\forre\\Desktop\\REU\\TDA\\Data\\TDAOutputs\\Killian_complices.json\",\"w\")\n",
+    "f = open(r\"C:\\Users\\forre\\Desktop\\REU\\TDA\\Data\\TDAOutputs\\PCA1_10Cubes_30Perc_complices.json\",\"w\")\n",
     "f.write(json)\n",
     "f.close()"
    ]
@@ -379,14 +424,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "454d3b7c-705f-4863-8794-3f6e239596a2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle as pk\n",
     "pickle = pk.dump(mapper_output_df,\n",
-    "                 open(r\"C:\\Users\\forre\\Desktop\\REU\\TDA\\Data\\TDAOutputs\\Killian_dfs.p\",\"wb\"))"
+    "                 open(r\"C:\\Users\\forre\\Desktop\\REU\\TDA\\Data\\TDAOutputs\\PCA1_10Cubes_30Perc_complices_dfs.p\",\"wb\"))"
    ]
   }
  ],
