--- a/TDA_Analysis_Scripts/scomplexAnalysis.ipynb
+++ b/TDA_Analysis_Scripts/scomplexAnalysis.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "harmful-display",
+   "id": "9b4650dc-fe59-4ac3-a1c1-ccec62dd4e40",
    "metadata": {},
    "source": [
     "# Simplicial Complex Analysis\n",
     "\n",
-    "<span style='color:Red'>TODO: Generate box plots for the entire shape (on each stat) as well as the box plots for each shape on the nodes.</span> <br>\n",
+    "<span style='color:Red'>TODO: Generate a system to analyze the largest shape per stratum per year.</span> <br>\n",
     "<span style='color:Red'> Currently using the largest number of nodes in each shape. </span> <br> \n",
     "Written by Frederick Miller, Casey McKean, and Wako Bungula. <br>\n",
     "The kepler mapper object gives an output that is not easily navigatible. To resolve this, we wish to create shapes that are easier to navigate and understand, and reveal the data inside of them. <br>\n",
@@ -16,8 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "adjacent-chuck",
+   "execution_count": 3,
+   "id": "d8343bf7-beaa-4a81-a5be-b30a735bc815",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "weekly-holmes",
+   "id": "45d5e8ea-efae-4911-9e5f-6e212d215669",
    "metadata": {},
    "source": [
     "# File paths, `.p`, and `.json` import\n",
@@ -54,8 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "stupid-phrase",
+   "execution_count": 4,
+   "id": "ef130f35-f347-4ae5-8e69-d04aab55bad6",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "phantom-estate",
+   "id": "4479289c-cdc9-4171-b1d1-36a4159f61b8",
    "metadata": {},
    "source": [
     "# Functions\n",
@@ -102,8 +102,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "absent-insertion",
+   "execution_count": 5,
+   "id": "de23ad82-5631-4630-b632-62b8b492da6c",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "velvet-processing",
+   "id": "d6fb4619-9695-4679-94b7-ee95c48e5978",
    "metadata": {},
    "source": [
     "# Generating Summary Statistics on the entire simplicial complex\n",
@@ -371,13 +371,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< Updated upstream
    "execution_count": null,
    "id": "9b125a72-c484-45ed-a304-0028003907f4",
-=======
-   "execution_count": 4,
-   "id": "civilian-musician",
->>>>>>> Stashed changes
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -399,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rubber-chorus",
+   "id": "75749e29-d933-4ec1-a30b-1c76a03ff355",
    "metadata": {},
    "source": [
     "# Analyzing the largest structure\n",
@@ -408,13 +403,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< Updated upstream
    "execution_count": null,
    "id": "b26adfc0-e51d-41bc-a1a4-ceeac2603a91",
-=======
-   "execution_count": 5,
-   "id": "talented-tuesday",
->>>>>>> Stashed changes
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -438,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "asian-detective",
+   "id": "e776e594-40a5-4f2c-bcd5-bd11fa241322",
    "metadata": {},
    "source": [
     "# Condensing 1-simplices\n",
@@ -449,13 +439,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< Updated upstream
    "execution_count": null,
    "id": "8281a652-07ae-4846-b5e9-29e87be93a78",
-=======
-   "execution_count": 6,
-   "id": "ahead-cattle",
->>>>>>> Stashed changes
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -493,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "voluntary-feedback",
+   "id": "5b2fa052-7036-400e-932d-5c547b29b447",
    "metadata": {},
    "source": [
     "# Box plot per shape\n",
@@ -507,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "nutritional-movie",
+   "id": "c89fb6bd-59f4-4634-830d-4bf11410f34d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,11 +535,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "b64b727b-a4ff-44a3-9f19-3985f65bf117",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current Simplical Complex:  ['Stratum 1 SUMMER 93-00: ']\n",
+      "number of shapes:  8\n",
+      "Shape:  ['cube0_cluster0', 'cube2_cluster0', 'cube5_cluster0', 'cube6_cluster1', 'cube5_cluster2', 'cube1_cluster0', 'cube8_cluster1', 'cube7_cluster1', 'cube4_cluster0', 'cube3_cluster0']\n",
+      "Links:  {'cube0_cluster0': ['cube1_cluster0'], 'cube1_cluster0': ['cube2_cluster0'], 'cube2_cluster0': ['cube3_cluster0'], 'cube3_cluster0': ['cube4_cluster0'], 'cube4_cluster0': ['cube5_cluster0', 'cube5_cluster2'], 'cube5_cluster0': ['cube6_cluster1'], 'cube6_cluster1': ['cube7_cluster1'], 'cube6_cluster2': ['cube7_cluster0'], 'cube7_cluster1': ['cube8_cluster1'], 'cube8_cluster2': ['cube9_cluster0']}\n",
+      "Node:  cube0_cluster0  | Indices:  [67, 40, 44, 45, 46, 108, 58]\n",
+      "B:  ['cube1_cluster0']\n",
+      "--------\n",
+      "Node:  cube2_cluster0  | Indices:  [0, 2, 5, 10, 11, 15, 17, 18, 21, 22, 24, 25, 26, 27, 28, 29, 31, 43, 47, 49, 50, 51, 52, 53, 54, 56, 72, 75, 76, 82, 87, 88, 104, 107, 109, 111, 112, 113, 114]\n",
+      "B:  ['cube3_cluster0']\n",
+      "--------\n",
+      "Node:  cube5_cluster0  | Indices:  [97, 66, 3, 4, 81, 83, 59]\n",
+      "B:  ['cube6_cluster1']\n",
+      "--------\n",
+      "Node:  cube6_cluster1  | Indices:  [97, 66, 101, 102]\n",
+      "B:  ['cube7_cluster1']\n",
+      "--------\n",
+      "Node:  cube5_cluster2  | Indices:  [20]\n",
+      "B:  None\n",
+      "--------\n",
+      "Node:  cube1_cluster0  | Indices:  [0, 2, 5, 9, 10, 11, 12, 13, 14, 15, 18, 19, 24, 26, 27, 28, 29, 38, 41, 42, 43, 44, 47, 48, 53, 54, 55, 57, 67, 68, 77, 78, 79, 110, 111, 112, 114, 117, 118, 119]\n",
+      "B:  ['cube2_cluster0']\n",
+      "--------\n",
+      "Node:  cube8_cluster1  | Indices:  [98, 91]\n",
+      "B:  None\n",
+      "--------\n",
+      "Node:  cube7_cluster1  | Indices:  [98, 99, 102, 89, 92, 93]\n",
+      "B:  ['cube8_cluster1']\n",
+      "--------\n",
+      "Node:  cube4_cluster0  | Indices:  [1, 4, 6, 20, 23, 32, 34, 35, 36, 59, 61, 62, 63, 64, 65, 69, 71, 73, 83, 105]\n",
+      "B:  ['cube5_cluster0', 'cube5_cluster2']\n",
+      "--------\n",
+      "Node:  cube3_cluster0  | Indices:  [1, 16, 22, 30, 32, 33, 34, 36, 37, 39, 51, 56, 60, 62, 63, 65, 69, 70, 71, 72, 74, 76, 87, 100, 106, 115]\n",
+      "B:  ['cube4_cluster0']\n",
+      "--------\n"
+     ]
+    }
+   ],
+   "source": [
+    "allComplices = list(jsonData.keys())\n",
+    "for key in allComplices[0:1]: # remove the indices here to get all the strata for all the time periods\n",
+    "    print(\"Current Simplical Complex: \", key)\n",
+    "    scomplex = jsonData.get(key)\n",
+    "    shapes = clean_getShapes(scomplex)\n",
+    "    print(\"number of shapes: \", len(shapes))\n",
+    "    shape = shapes[0] # chosen arbitrarily \n",
+    "    links = scomplex.get('links')\n",
+    "    print(\"Shape: \", shape)\n",
+    "    print(\"Links: \", links)\n",
+    "    nodes = scomplex.get('nodes')\n",
+    "    for node in shape:\n",
+    "        A = nodes.get(node)\n",
+    "        print(\"Node: \" , node  , \" | Indices: \",A)\n",
+    "        # To do: get \"B\" to be the other node adjacent to it. This is gonna be a lot of work.\n",
+    "        B = links.get(node)\n",
+    "        print(\"B: \", B)\n",
+    "        print(\"--------\")\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -582,7 +632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
