update lower pool 4 kmapper

--- a/pools_specific_EDA/Lower Pool 4/kmapper/kmapper_lower_pool_4.ipynb
+++ b/pools_specific_EDA/Lower Pool 4/kmapper/kmapper_lower_pool_4.ipynb
@@ -265,6 +265,9 @@
     "\n",
     "    # defining clustering and kmapper parameters\n",
     "    \n",
+    "    # to match up indices in scomplex with the original dataframe X\n",
+    "    X.reset_index(drop = True, inplace = True) \n",
+    "    \n",
     "    # create instance of clustering alg\n",
     "    cluster_alg = sklearn.cluster.DBSCAN(eps=DBSCAN_EPSILON, min_samples=DBSCAN_MIN_SAMPLES, metric='euclidean')\n",
     "\n",
@@ -350,7 +353,7 @@
     "    mapper.visualize(scomplex, color_values=color_values, color_function_name=color_function_name,\n",
     "                     path_html=html_output_path, lens = summary_variable, lens_names = projected_vars)\n",
     "    \n",
-    "    return(scomplex)"
+    "    return scomplex, X"
    ]
   },
   {
@@ -413,7 +416,8 @@
     "perc_overlap_list = [.35, .45, .55]\n",
     "\n",
     "mapper_pca_output = []\n",
-    "mapper_pca_output_title = []\n"
+    "mapper_pca_output_title = []\n",
+    "mapper_output_df = []\n"
    ]
   },
   {
@@ -709,8 +713,13 @@
     "for subset_df in pool4L_subsets:\n",
     "    for n_cubes in n_cubes_list:\n",
     "        for perc_overlap in perc_overlap_list: \n",
-    "            mapper_pca_output.append(mapper_pca_func(subset_df, n_cubes, perc_overlap, scomplex_bool = False))\n",
-    "            mapper_pca_output_title.append(subset_df['TITLE'].iloc[0])\n"
+    "            \n",
+    "            scomplex, X = mapper_pca_func(subset_df, n_cubes, perc_overlap, scomplex_bool = False)\n",
+    "            \n",
+    "            \n",
+    "            mapper_pca_output.append(scomplex)\n",
+    "            mapper_pca_output_title.append(subset_df['TITLE'].iloc[0])\n",
+    "            mapper_output_df.append(X)\n"
    ]
   },
   {
